# garmin

./: .gitignore  README.md
DailyTasks/: Caddyfile  manifest.xml
DailyTasks/resources/strings/: strings.xml
DailyTasks/server/: .env  Cargo.toml
DailyTasks/server/src/: main.rs  markdown.rs
DailyTasks/source/: Api.mc  App.mc  DailyTasksApp.mc  DailyTasksView.mc  Misc.mc  Types.mc  View.mc
GarminGenesis/: manifest.xml
GarminGenesis/resources/strings/: strings.xml
GarminGenesis/source/: Api.mc  App.mc  GarminGenisisApi.mc  GarminGenisisApp.mc  GarminGenisisGlance.mc  GarminGenisisView.mc  Glance.mc
